--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gin-fs",
-  "version": "1.0.0",
+  "name": "@aubrgin/gin-fs",
+  "version": "0.1.0",
   "description": "Filesystem toolkit for gin",
   "main": "index.js",
   "scripts": {
